<resources>
    <string name="app_name">FreshDrinks</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment log in </string>
    <string name="hello_blank_fragment_register">Hello register</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">SignIn</string>
    <string name="prompt_password">Short password</string>
    <string name="prompt_username">Short username</string>
</resources>
